
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_RDWR ;
 int SEEK_SET ;
 int lseek (int,int ,int ) ;
 int map ;
 int open (char*,int ) ;
 int printf (char*) ;
 int sc_len ;
 int stop ;
 scalar_t__ write (int,char*,int ) ;

void *procselfmemThread(void *arg)
{
    char *str;
    str=(char*)arg;
    int f=open("/proc/self/mem",O_RDWR);
    int i,c=0;
    for(i=0;i<1000000 && !stop;i++) {
        lseek(f,map,SEEK_SET);
        c+=write(f, str, sc_len);
    }
    printf("thread stopped\n");
}
